Image Extraction Without Stream Duration
Trying to extract an image from a video with no duration and/or frame
count information contained in the video container will cause problems
like NullPointerExceptions at multiple places in the `image` workflow
operation.

This patch updates the code to gracefully handle such scenarios without
just breaking down. This also slightly modified the operation's behavior
in that image extraction from streams with no duration information now
works exactly like image extraction from streams with a single frame:
We just extract the first frame we know does exist.

This is related to #1384